RESOLVED FIXED 151704
Modern IDB: storage/indexeddb/create-and-remove-object-store.html fails
https://bugs.webkit.org/show_bug.cgi?id=151704
Summary Modern IDB: storage/indexeddb/create-and-remove-object-store.html fails
Brady Eidson
Reported 2015-12-01 09:51:55 PST
Modern IDB: storage/indexeddb/create-and-remove-object-store.html fails
Attachments
Patch v1 (2.61 KB, patch)
2015-12-01 09:54 PST, Brady Eidson
beidson: review-
Patch v2 (3.71 KB, patch)
2015-12-01 10:06 PST, Brady Eidson
achristensen: review+
Brady Eidson
Comment 1 2015-12-01 09:54:39 PST
Created attachment 266356 [details] Patch v1
Brady Eidson
Comment 2 2015-12-01 10:06:46 PST
Created attachment 266358 [details] Patch v2
Alex Christensen
Comment 3 2015-12-01 10:27:18 PST
Comment on attachment 266358 [details] Patch v2 ok
Brady Eidson
Comment 4 2015-12-01 10:30:56 PST
Note You need to log in before you can comment on or make changes to this bug.