Modern IDB: storage/indexeddb/create-and-remove-object-store.html fails. https://bugs.webkit.org/show_bug.cgi?id=151704

Reviewed by Alex Christensen.

Source/WebCore:

No new tests (At least one previously failing test now passes).

* Modules/indexeddb/client/IDBDatabaseImpl.cpp:
(WebCore::IDBClient::IDBDatabase::deleteObjectStore):

LayoutTests:

* platform/mac-wk1/TestExpectations:
* storage/indexeddb/modern/idbdatabase-deleteobjectstore-failures-expected.txt:

Canonical link: https://commits.webkit.org/169841@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@192891 268f45cc-cd09-0410-ab3c-d52691b4dbfc